# ABox

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  ABoxApp.cpp  ABoxApp.cpp.orig  ABoxApp.hpp  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DebugHandler.cpp  DebugHandler.hpp  DeviceHandler.cpp  DeviceHandler.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  LICENSE  Makefile  MemoryWrapper.hpp  PreProcUtils.hpp  README.md  ResourcesManager.cpp  ResourcesManager.hpp  RessourcesManager.cpp  RessourcesManager.hpp  ShaderHandler.cpp  ShaderHandler.hpp  SwapchainManager.cpp  SwapchainManager.hpp  VkShaderHandler.cpp  VkShaderHandler.h  VkShaderHandler.hpp  VkTstApp.cpp  VkTstApp.hpp  VulkanTest  WindowManager.cpp  WindowManager.hpp  main.cpp
.github/workflows/: ci.yml
apps/: CMakeLists.txt
apps/abox/: ABoxApp.hpp  CMakeLists.txt  main.cpp
apps/allocator_test/: CMakeLists.txt  main.cpp
docs/: Doxyfile
platform/: CMakeLists.txt  futex.hpp
platform/fallback/: futex.cpp
platform/linux/: futex.cpp
platform/windows/: futex.cpp
src/core/: ABoxApp.cpp  ABoxApp.hpp  ResourcesManager.cpp  ResourcesManager.hpp  main.cpp
src/graphics/: FrameBufferBroker.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  RenderPassManager.hpp  ShaderHandler.cpp  ShaderHandler.hpp  SwapchainManager.cpp  SwapchainManager.hpp
src/memory/: MemoryWrapper.hpp
src/pipelines/: ComputePipeline.cpp  ComputePipeline.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  PipelineBase.cpp  PipelineBase.hpp  PipelineManager.cpp  PipelineManager.hpp  RayTracingPipeline.cpp  RayTracingPipeline.hpp
src/utils/: FetchList.hpp  Logger.cpp  Logger.hpp  PreProcUtils.hpp  VersionedSlot.hpp  vectorUtils.hpp
src/vulkan/: CommandsHandler.cpp  CommandsHandler.hpp  DebugHandler.cpp  DebugHandler.hpp  DeviceHandler.cpp  DeviceHandler.hpp  QueueManager.hpp  SynchronisationManager.hpp
src/window/: WindowManager.cpp  WindowManager.hpp
tests/: CMakeLists.txt
tests/memory/: CMakeLists.txt  test_memory_wrapper.cpp
tests/utils/: CMakeLists.txt  test_fetch_list.cpp  test_versioned_slot.cpp
